--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <ul class="flex-list">
       <li class="ico"><h3><a href="#" onClick="animation('usa'); event.preventDefault();"><img src="US.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('rainbow'); event.preventDefault();"><img src="rainbow.jpg"></a></h3></li>
+      <li class="ico"><h3><a href="#" onClick="animation('fireworks'); event.preventDefault();"><img src="fireworks.jpg"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('fire'); event.preventDefault();"><img src="fire.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('water'); event.preventDefault();"><img src="faucet.jpg"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('dope'); event.preventDefault();"><img src="fireworks.png"></a></h3></li>
