--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <li class="ico"><h3><a href="#" onClick="animation('fireworks'); event.preventDefault();"><img src="fireworks.jpg"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('fire'); event.preventDefault();"><img src="fire.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('water'); event.preventDefault();"><img src="faucet.jpg"></a></h3></li>
-      <li class="ico"><h3><a href="#" onClick="animation('dope'); event.preventDefault();"><img src="fireworks.png"></a></h3></li>
+      <li class="ico"><h3><a href="#" onClick="animation('totes'); event.preventDefault();"><img src="fireworks.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('marquee'); event.preventDefault();"><img src="marquee.jpg"></a></h3></li>
     </ul>
 
