--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     <h2>Animations</h2>
     <ul class="flex-list">
       <li class="ico"><h3><a href="#" onClick="animation('usa'); event.preventDefault();"><img src="US.png"></a></h3></li>
-      <li class="ico"><h3><a href="#" onClick="animation('rainbow'); event.preventDefault();"><img src="rainbow.jpg"></a></h3></li>
+      <li class="ico"><h3><a href="#" onClick="animation('rainbow'); event.preventDefault();"><img src="rainbow.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('fireworks'); event.preventDefault();"><img src="fireworks.jpg"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('fire'); event.preventDefault();"><img src="fire.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('water'); event.preventDefault();"><img src="faucet.jpg"></a></h3></li>
-      <li class="ico"><h3><a href="#" onClick="animation('totes'); event.preventDefault();"><img src="fireworks.png"></a></h3></li>
+      <li class="ico"><h3><a href="#" onClick="animation('totes'); event.preventDefault();"><img src="gradient-radial.png"></a></h3></li>
       <li class="ico"><h3><a href="#" onClick="animation('marquee'); event.preventDefault();"><img src="marquee.jpg"></a></h3></li>
     </ul>
 
